# ev_charging_stations

./: ev_charging.db  pyproject.toml  readme.md  requirements.txt
data/: ev_stations.csv  user_reviews.csv
src/ev_charging_stations/: api.py  index.html
src/ev_charging_stations/models/: query_models.py
src/ev_charging_stations/pipelines/: query_pipeline.py
src/ev_charging_stations/scripts/: compute_sentiment.py  load_data.py
src/ev_charging_stations/services/: database.py  geocoding.py  llm_extraction.py
tests/: __init__.py  test_agent.py  test_api.py
